[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Scenes/SubOptions/Playlists/AllSongs/Songs.gd" type="Script" id=1]
[ext_resource path="res://src/Scenes/Song/SongHighlighter.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Scenes/Song/SongDescriptionHeader.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Scenes/SubOptions/Playlists/SongScroller.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Scenes/Song/SongFilter/SongFilters.tscn" type="PackedScene" id=5]

[node name="SongsNew" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="SongHighlighter" parent="." instance=ExtResource( 2 )]
visible = false
margin_top = 87.0
margin_bottom = 128.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 0

[node name="LeftEmpty" type="Control" parent="HBoxContainer"]
margin_right = 5.0
margin_bottom = 600.0
rect_min_size = Vector2( 5, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 5.0
margin_right = 1115.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SongFilters" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_right = 1110.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 1110.0
margin_bottom = 56.0

[node name="SongDescriptionHeader" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 64.0
margin_right = 1110.0
margin_bottom = 84.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 1110.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="SongScroller" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1110.0
margin_bottom = 508.0
scroll_horizontal_enabled = false

[node name="Songs" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongScroller"]
margin_right = 1110.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 3

[node name="RightEmpty" type="Control" parent="HBoxContainer"]
margin_left = 1115.0
margin_right = 1120.0
margin_bottom = 600.0
rect_min_size = Vector2( 5, 0 )
mouse_filter = 1

[connection signal="resized" from="HBoxContainer/VBoxContainer/HBoxContainer/SongScroller" to="." method="_on_SongScroller_resized"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/HBoxContainer/SongScroller/Songs" to="HBoxContainer/VBoxContainer/HBoxContainer/SongScroller" method="toggle_processes" flags=3 binds= [ true ]]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/HBoxContainer/SongScroller/Songs" to="HBoxContainer/VBoxContainer/HBoxContainer/SongScroller" method="toggle_processes" flags=3 binds= [ false ]]
